# rag

./: .gitignore  README.md  pyproject.toml  rag.ipynb  requirements.txt  todo.md
evaluation/: results.csv
evaluation/chatpdf-results/: attention_testset_results.json  ipcc_testset_results.json  soberana_testset_results.json
evaluation/humata-results/: attention_testset_results.json  ipcc_testset_results.json  soberana_testset_results.json
evaluation/reports/: attention-chatpdf-report-(2024-11-16).html  attention-humata-report-(2024-11-17).html  attention-report-(2024-11-16).html  attention-report.html  ipcc-chatpdf-report-(2024-11-16).html  ipcc-humata-report-(2024-11-17)-98cec105.html  ipcc-humata-report-(2024-11-17)-ab48317c.html  ipcc-report-(2024-11-16).html  ipcc-report.html  soberana-chatpdf-report-(2024-11-16).html  soberana-humata-report-(2024-11-17)-c777d0d4.html  soberana-humata-report-(2024-11-17).html  soberana-report-(2024-11-16).html  soberana-report.html
evaluation/testset/: attention_testset.jsonl  ipcc_testset.jsonl  soberana_testset.jsonl
evaluation/wikiQA/: README.md  dataset.json  ui.py
experiments/: chunking.ipynb  diagrams.ipynb  indexing.ipynb
notebooks/: chunking.ipynb  chunking_testset.json  chunks.pkl  colab.ipynb  diagrams.ipynb  indexing.ipynb  rag.ipynb  retrieval.ipynb  sf-2-bin.ipynb
src/: main.py  prompt.py  settings.py  ui.py
src/evaluation/: eval_retrieval.ipynb
src/evaluation/metrics/: retrieval.py
src/indexing/chunking/: agentic.py  semantic.py
src/lib/: schema.py  vectordb.py
src/rag/: __init__.py  main.py  profile.py  prompt.py  settings.py
src/rag/evaluation/: eval_retrieval.ipynb
src/rag/evaluation/metrics/: retrieval.py
src/rag/indexing/chunking/: meta.py
src/rag/indexing/preprocess/: pdf2md.py
src/rag/lib/: __init__.py  context.py  models.py  schema.py  vectordb.py
tests/performance/chunking/: meta_chunking_test.py  semantic_chunking_test.py
tests/unit/chunking/: meta_chunking_test.py  recursive_chunking_test.py  semantic_chunking_test.py
