[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter==1.1.1",
    "langchain-core==0.3.29",
    "numpy==2.2.1",
    "pandas==2.2.3",
    "pymupdf==1.25.1",
    "tqdm==4.67.1",
    "torch==2.5.1",
    "marker-pdf==1.2.3",
    "llama-cpp-python==0.3.6",
    "sentence-transformers==3.3.1",
    "giskard[llm]==2.5.0",
    "langchain-community==0.3.14",
]

[[tool.uv.index]]
url = "http://nexus.prod.uci.cu/repository/pypi-all/simple"
default = true
