[project]
name = "rag"
version = "0.6.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy==2.2.1",
    "pandas==2.2.3",
    "pymupdf==1.25.1",
    "tqdm==4.67.1",
    "torch==2.5.1",
    "marker-pdf==1.2.3",
    "pytest==8.3.4",
    "pydantic==2.10.5",
    "langchain==0.3.19",
    "llama-cpp-python==0.3.7",
    "tiktoken==0.9.0",
    "gradio==5.20.1",
    "flagembedding>=1.3.4",
]

[project.scripts]
main = "rag:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = ["."]

[dependency-groups]
dev = ["jupyter>=1.1.1", "py-spy>=0.4.0"]
